--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -4,6 +4,9 @@
 
   display: grid;
   grid-template-rows: auto 1fr auto;
+
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .header {
@@ -11,6 +14,11 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.header_label {
+  font-size: 34px;
+  cursor: pointer;
 }
 
 .footer {
