Responsive layout and theme switcher

--- a/src/components/CountriesTable/CountriesTable.module.css
+++ b/src/components/CountriesTable/CountriesTable.module.css
@@ -1,5 +1,6 @@
 .heading {
   display: flex;
+  padding: 20px;
 }
 
 .heading button {
@@ -9,10 +10,16 @@
   cursor: pointer;
 }
 
-.heading_name,
-.heading_population {
+.heading_flag {
   flex: 1;
-  padding: 20px;
+  margin-right: 16px;
+}
+
+.heading_name,
+.heading_population,
+.heading_area,
+.heading_gini {
+  flex: 4;
   font-weight: 500;
   color: var(--text-color-secondary);
 
@@ -48,6 +55,7 @@
   box-shadow: var(--box-shadow);
   font-weight: 500;
 
+  cursor: pointer;
   transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
 }
 
@@ -56,11 +64,34 @@
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
 }
 
-.name,
-.population {
+.flag {
   flex: 1;
+  margin-right: 16px;
+}
+
+.name,
+.population,
+.area,
+.gini {
+  flex: 4;
+}
+
+.flag img {
+  width: 100%;
+  border-radius: 2px;
 }
 
 .name {
   text-align: left;
+}
+
+@media screen and (max-width: 720px) {
+  .flag,
+  .area,
+  .gini,
+  .heading_flag,
+  .heading_area,
+  .heading_gini {
+    display: none;
+  }
 }
