--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,4 +1,23 @@
+.input_container {
+  margin-bottom: 40px;
+}
+
 .count {
   color: var(--text-color-secondary);
   margin: 12px 0;
+}
+
+@media screen and (min-width: 720px) {
+  .input_container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .count {
+    flex: 1;
+  }
+
+  .input {
+    flex: 2;
+  }
 }
