--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,16 @@
   --box-shadow: 8px 2px 8px rgba(0, 0, 0, 0.05);
 }
 
+[data-theme="dark"] {
+  --text-color: #f0f0f0;
+  --text-color-secondary: #b3c5cd;
+  --primary-color: #21b6b7;
+
+  --background-color: #252329;
+  --background-color-light: #120f13;
+  --background-color-dark: #3c393f;
+}
+
 html,
 body {
   padding: 0;
