--- a/src/pages/country/Country.module.css
+++ b/src/pages/country/Country.module.css
@@ -76,10 +76,12 @@
 .details_borders img {
   width: 100%;
   border-radius: 4px;
+  border: 1px solid var(--primary-color);
 }
 
 .details_borders_country {
   text-align: center;
+  cursor: pointer;
 }
 
 .container {
